# Archivist

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: indexing.rs  query.rs
scripts/: analyze_similar.py  compare_hashes.py  dups_browser.py  dups_folders.py  export_models.py  gen_synthetic.py  make_icon.py  short_files.py  top_folders.py
src/: archive.rs  config.rs  db.rs  dedup.rs  extract.rs  index.rs  lib.rs  main.rs  search.rs  update_mod.rs
src/embed/: clip.rs  mod.rs  text.rs
