[package]
name = "archivist"
version = "0.1.0"
edition = "2021"
description = "Backup/archivage standalone (zstd) avec recherche sémantique texte→image et texte→texte"
license = "MIT"

[[bin]]
name = "archivist"
path = "src/main.rs"

[lib]
name = "archivist"
path = "src/lib.rs"

[features]
# GPU opt-in. Par défaut : CPU (stable sur ces modèles).
#   cuda     : GPU NVIDIA via CUDA EP (nécessite CUDA/cuDNN compatibles ort).
#   directml : tout GPU Windows DX12. ⚠ certains nœuds (Reshape de CLIP)
#              plantent l'EP DML sur ces modèles → à tester avant usage.
cuda = ["ort/cuda"]
directml = ["ort/directml"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
walkdir = "2.5"
zstd = "0.13"
blake3 = "1.5"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1.10"
image = "0.25"
ort = "2.0.0-rc.12"
tokenizers = "0.20"
pdf-extract = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
eframe = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
self_update = { version = "0.42", default-features = false, features = ["rustls", "archive-zip", "compression-zip-deflate"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.13"

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "query"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
